plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.deepread'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	implementation 'org.modelmapper:modelmapper:3.1.1'

	// Spring Web & Security
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// OAuth2 Client (Kakao, Naver, Google 연동용)
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// JWT (JSON Web Token)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Lombok (코드 간결화용)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Spring Security 테스트용
	testImplementation 'org.springframework.security:spring-security-test'

	// 기타
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
	// 테스트 시에도 검증 작동하게 하려면
	testImplementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
}

tasks.named('test') {
	useJUnitPlatform()
}
